krator/tests/ui/state/require_same_object_state.stderr
error[E0277]: the trait bound `OtherState: krator::State<PodState>` is not satisfied
  --> $DIR/require_same_object_state.rs:50:32
   |
LL |         Transition::next(self, OtherState)
   |         ----------------       ^^^^^^^^^^ the trait `krator::State<PodState>` is not implemented for `OtherState`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the trait `krator::State<OtherPodState>` is implemented for `OtherState`
note: required by a bound in `Transition::<S>::next`
  --> $SRC_DIR/src/state.rs:43:33
   |
LL |     pub fn next<I: State<S>, O: State<S>>(_i: Box<I>, o: O) -> Transition<S>
   |                                 ^^^^^^^^ required by this bound in `Transition::<S>::next`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
